--- a/Globomantics/Views/Auto/Quote.cshtml
+++ b/Globomantics/Views/Auto/Quote.cshtml
@@ -1,19 +1,21 @@
 ﻿@model AutoQuote
 
 @section Banner {
-    <banner title="Auto Insurance"
-            sub-title="With accident forgiveness and the lowest rates around, your checking account is as safe as you."
-            background-color="green"></banner>
+    <div class="jumbotron jumbotron-fluid jumbotron-green">
+        <div class="container">
+            <h1 class="display-4">Auto Insurance</h1>
+            <p class="lead">With accident forgiveness and the lowest rates around, your checking account is as safe as you.</p>
+        </div>
+    </div>
 }
 
 @section SideNav {
     @Html.Partial("LeftNav")
-    @await Component.InvokeAsync("MortgageRates")
 }
 
 <p>After you complete this form you should receive an email with your quote shortly after. Please allow up to 1 hour to receive your quote.</p>
 <hr class="featurette-divider-thin">
-<form asp-controller="Auto" asp-action="Index">
+<form asp-controller="Auto" asp-action="Quote">
     <div class="form-group">
         <label asp-for="Make">Vehicle Make</label>
         <select asp-for="Make" class="form-control">
@@ -25,10 +27,12 @@
     <div class="form-group">
         <label asp-for="Year">Vehicle Year</label>
         <input asp-for="Year" type="text" class="form-control" placeholder="Year">
+        <span asp-validation-for="Year" class="error"></span>
     </div>
     <div class="form-group">
         <label asp-for="Price">Purchase Price</label>
         <input asp-for="Price" type="text" class="form-control" placeholder="Price">
+        <span asp-validation-for="Year" class="error"></span>
     </div>
     <div class="form-group">
         <label asp-for="Type">Vehicle Type</label>
