--- a/Globomantics/Views/Document/Index.cshtml
+++ b/Globomantics/Views/Document/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@section Banner{
-    <banner title="Knowledge is Power"
-            sub-title="We offer you the tools and education you need to succeed."
-            background-color="green"></banner>
-
+    <div class="jumbotron jumbotron-fluid jumbotron-green">
+        <div class="container">
+            <h1 class="display-4">Knowledge is Power</h1>
+            <p class="lead">We offer you the tools and education you need to succeed.</p>
+        </div>
+    </div>
 }
 
 <div class="col-md-12">
