--- a/Globomantics/Views/Insurance/Index.cshtml
+++ b/Globomantics/Views/Insurance/Index.cshtml
@@ -1,7 +1,5 @@
 ﻿@section Banner {
-    <banner title="Insurance" 
-            sub-title="Protect what's important to you." 
-            background-color="green"></banner>
+    <banner title="Insurance" sub-title="Protect what's important to you." background-color="green"></banner>
 }
 
 @section SideNav {
